[gd_scene load_steps=12 format=3 uid="uid://bp436jogrlent"]

[ext_resource type="Script" path="res://uiHandler.gd" id="1"]
[ext_resource type="Script" path="res://textAssembly.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://8ixue2toohw6" path="res://statsTotal.tscn" id="3"]
[ext_resource type="StyleBox" uid="uid://bdodam6yl1c6g" path="res://styleboxes/vSeperatorLineStylebox.tres" id="4_d7sgm"]
[ext_resource type="Script" path="res://rootContainer.gd" id="5"]
[ext_resource type="StyleBox" uid="uid://b7m8xd30rfu54" path="res://styleboxes/hSeperatorLineStylebox.tres" id="6_f8ilg"]
[ext_resource type="PackedScene" uid="uid://chsqjbl3esybv" path="res://loader.tscn" id="7_x3nv2"]
[ext_resource type="Script" path="res://enabledLCPs.gd" id="9"]
[ext_resource type="PackedScene" uid="uid://ddjxwm3vgtups" path="res://Settings.tscn" id="10"]
[ext_resource type="StyleBox" uid="uid://bwip38hqn2j4m" path="res://styleboxes/CFStylebox.tres" id="10_cbhla"]
[ext_resource type="Script" path="res://classTemplateDisplay.gd" id="10_fr70s"]

[node name="root" type="MarginContainer"]
offset_right = 1024.0
offset_bottom = 600.0
mouse_filter = 2
script = ExtResource("5")

[node name="textAssembly" type="PanelContainer" parent="." groups=["sensors"]]
layout_mode = 2
mouse_filter = 2
script = ExtResource("2")

[node name="uiHandler" type="VBoxContainer" parent="textAssembly" groups=["lcpCatcher"]]
layout_mode = 2
theme_override_constants/separation = 0
script = ExtResource("1")

[node name="h" type="HBoxContainer" parent="textAssembly/uiHandler"]
layout_mode = 2

[node name="Label" type="Label" parent="textAssembly/uiHandler/h"]
layout_mode = 2
size_flags_horizontal = 0
text = " NPC : "

[node name="o" type="OptionButton" parent="textAssembly/uiHandler/h"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
fit_to_longest_item = false

[node name="Label2" type="Label" parent="textAssembly/uiHandler/h"]
layout_mode = 2
size_flags_horizontal = 0
text = " Tier : "

[node name="tier" type="OptionButton" parent="textAssembly/uiHandler/h"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
item_count = 3
selected = 0
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2

[node name="VSeparator" type="VSeparator" parent="textAssembly/uiHandler/h"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 5
theme_override_styles/separator = ExtResource("4_d7sgm")

[node name="titleCont" type="ScrollContainer" parent="textAssembly/uiHandler/h"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="title" type="Label" parent="textAssembly/uiHandler/h/titleCont"]
layout_mode = 2
size_flags_horizontal = 6
text = "Roll 20 NPC Ability Copy Paste Generator V2.0"

[node name="VSeparator2" type="VSeparator" parent="textAssembly/uiHandler/h"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 5
theme_override_styles/separator = ExtResource("4_d7sgm")

[node name="a" type="MenuButton" parent="textAssembly/uiHandler/h" groups=["lcpCatcher"]]
layout_mode = 2
size_flags_horizontal = 8
text = "Enabled LCPs"
flat = false
script = ExtResource("9")

[node name="b" type="Button" parent="textAssembly/uiHandler/h"]
layout_mode = 2
size_flags_horizontal = 8
text = "Load LCP"

[node name="VSeparator3" type="VSeparator" parent="textAssembly/uiHandler/h"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 5
theme_override_styles/separator = ExtResource("4_d7sgm")

[node name="settings" type="Button" parent="textAssembly/uiHandler/h"]
layout_mode = 2
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="textAssembly/uiHandler"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = ExtResource("6_f8ilg")

[node name="stats" parent="textAssembly/uiHandler" instance=ExtResource("3")]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="textAssembly/uiHandler"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = ExtResource("6_f8ilg")

[node name="ct" type="VBoxContainer" parent="textAssembly/uiHandler"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("10_fr70s")

[node name="s" type="HSplitContainer" parent="textAssembly/uiHandler/ct"]
layout_mode = 2
theme_override_constants/separation = 8
dragger_visibility = 2

[node name="c" type="Button" parent="textAssembly/uiHandler/ct/s"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.494118, 0.494118, 0.494118, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_styles/disabled = ExtResource("10_cbhla")
disabled = true
toggle_mode = true
button_pressed = true
text = "Classes"

[node name="h" type="MarginContainer" parent="textAssembly/uiHandler/ct/s"]
layout_mode = 2
size_flags_horizontal = 3

[node name="t" type="Button" parent="textAssembly/uiHandler/ct/s/h"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.494118, 0.494118, 0.494118, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_styles/disabled = ExtResource("10_cbhla")
toggle_mode = true
text = "Templates"

[node name="activeTemplate" type="OptionButton" parent="textAssembly/uiHandler/ct/s/h"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 8
fit_to_longest_item = false

[node name="classes" type="HBoxContainer" parent="textAssembly/uiHandler/ct"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="s0" type="ScrollContainer" parent="textAssembly/uiHandler/ct/classes"]
layout_mode = 2
size_flags_horizontal = 3

[node name="v" type="VBoxContainer" parent="textAssembly/uiHandler/ct/classes/s0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="s1" type="ScrollContainer" parent="textAssembly/uiHandler/ct/classes"]
layout_mode = 2
size_flags_horizontal = 3

[node name="v" type="VBoxContainer" parent="textAssembly/uiHandler/ct/classes/s1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Templates" type="HBoxContainer" parent="textAssembly/uiHandler/ct"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="s0" type="ScrollContainer" parent="textAssembly/uiHandler/ct/Templates"]
layout_mode = 2
size_flags_horizontal = 3

[node name="v" type="VBoxContainer" parent="textAssembly/uiHandler/ct/Templates/s0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="s1" type="ScrollContainer" parent="textAssembly/uiHandler/ct/Templates"]
layout_mode = 2
size_flags_horizontal = 3

[node name="v" type="VBoxContainer" parent="textAssembly/uiHandler/ct/Templates/s1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
dialog_text = "Woah there space cowfolk, seems y'all don't have data loaded yet. To do so unzip the .lcp file that contains the NPCs. After selecting OK find those unzipped files and load 'em on up."
dialog_autowrap = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]
dialog_autowrap = true

[node name="loader" parent="." instance=ExtResource("7_x3nv2")]
layout_mode = 2

[node name="settings" parent="." groups=["lcpCatcher", "stylebox"] instance=ExtResource("10")]
visible = false

[connection signal="item_selected" from="textAssembly/uiHandler/h/o" to="textAssembly" method="_on_o_item_selected"]
[connection signal="item_selected" from="textAssembly/uiHandler/h/o" to="textAssembly/uiHandler" method="_on_o_item_selected"]
[connection signal="item_selected" from="textAssembly/uiHandler/h/tier" to="textAssembly" method="_on_tier_item_selected"]
[connection signal="pressed" from="textAssembly/uiHandler/h/b" to="loader" method="_on_b_pressed"]
[connection signal="pressed" from="textAssembly/uiHandler/h/settings" to="." method="_on_settings_pressed"]
[connection signal="toggled" from="textAssembly/uiHandler/ct/s/c" to="textAssembly/uiHandler/ct" method="_on_c_toggled"]
[connection signal="toggled" from="textAssembly/uiHandler/ct/s/h/t" to="textAssembly/uiHandler/ct" method="_on_t_toggled"]
[connection signal="item_selected" from="textAssembly/uiHandler/ct/s/h/activeTemplate" to="textAssembly/uiHandler/ct" method="_on_active_template_item_selected"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
